<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnLastMemo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Back" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/layout_save_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/_10sdp"
                android:orientation="vertical"
                android:paddingLeft="@dimen/_10sdp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="visible"
                    android:orientation="vertical">


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/sr_store_status"
                        android:gravity="center_horizontal"
                        android:textColor="#000000"
                        android:textSize="@dimen/_9sdp"
                        android:textStyle="bold" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="SMC Enterprise Ltd."
                        android:gravity="center_horizontal"
                        android:textColor="#000000"
                        android:textSize="@dimen/_9sdp"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="@dimen/_4sdp"
                        android:background="#000"
                        android:textSize="@dimen/_9sdp"
                        android:textStyle="normal" />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:orientation="horizontal"
                        android:layout_weight=".67"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/itemName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="start"
                            android:text="Items"
                            android:textColor="#000"
                            android:textSize="@dimen/_9sdp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:orientation="horizontal"
                        android:layout_weight=".99"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/vat"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="start"
                            android:text="@string/actual_qty"
                            android:textColor="#000"
                            android:textSize="@dimen/_9sdp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:orientation="horizontal"
                        android:layout_weight=".95"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/price"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="start"
                            android:text="@string/invoice_qty"
                            android:textColor="#000"
                            android:textSize="@dimen/_9sdp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:orientation="horizontal"
                        android:layout_weight=".98"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/qty"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="start"
                            android:text="@string/db_stock"
                            android:textColor="#000"
                            android:layout_marginEnd="@dimen/_2sdp"
                            android:textSize="@dimen/_9sdp"
                            android:textStyle="bold"
                            android:layout_marginRight="@dimen/_2sdp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:orientation="horizontal"
                        android:layout_weight=".95"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/total"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="start"
                            android:text="@string/order_qty"
                            android:textColor="#000"
                            android:textSize="@dimen/_9sdp"
                            android:textStyle="bold" />
                    </LinearLayout>


                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:background="#000"
                    android:textSize="@dimen/_9sdp"
                    android:textStyle="normal" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/product_list_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:itemCount="4"
                    tools:listitem="@layout/print_item">

                </androidx.recyclerview.widget.RecyclerView>


                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:background="#000"
                    android:textSize="@dimen/_9sdp"
                    android:textStyle="normal" />

            <!--    <LinearLayout
                    android:id="@+id/LinearFooter"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:visibility="visible"
                    android:orientation="vertical">-->

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Sales Representative"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:gravity="start"
                        android:textColor="#000"
                        android:textSize="@dimen/_9sdp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/sr_db_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="sr_db_name"
                        android:gravity="start"
                        android:textColor="#000"
                        android:textSize="@dimen/_9sdp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/sales_officer_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Address:"
                        android:gravity="start"
                        android:textColor="#000"
                        android:textSize="@dimen/_9sdp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/sales_officer_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Mobile No: "
                        android:gravity="start"
                        android:textColor="#000"
                        android:textSize="@dimen/_9sdp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/printDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:text="print_date"
                        android:gravity="start"
                        android:textColor="#000"
                        android:textSize="@dimen/_9sdp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Thank You!"
                        android:gravity="start"
                        android:textColor="#000"
                        android:layout_marginBottom="@dimen/_20sdp"
                        android:textSize="@dimen/_9sdp"
                        android:textStyle="bold" />

              <!--  </LinearLayout>-->


            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:layout_weight="3"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#d9d7d7">

            <Button
                android:id="@+id/btn_enable"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_centerInParent="true"
                android:text="Enable blutooth"
                android:visibility="gone" />

            <Button
                android:id="@+id/btn_connect"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_marginTop="-2dp"
                android:layout_marginRight="0dp"
                android:text="Print " />

            <Spinner
                android:id="@+id/sp_device"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_alignBottom="@+id/btn_connect"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_toLeftOf="@+id/btn_connect"
                android:visibility="gone" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#ff8800" />

        <Button
            android:id="@+id/btn_print_demo"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginTop="3dp"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:enabled="false"
            android:text="Print"
            android:visibility="gone" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="save"
            android:visibility="gone" />

    </LinearLayout>

</LinearLayout>